--- a/ShowDoMilhao/MainPage.xaml
+++ b/ShowDoMilhao/MainPage.xaml
@@ -3,20 +3,62 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ShowDoMilhao.MainPage">
 
-    <StackLayout>
-        <Button Text="Sortear Fácil" Clicked="Button_Clicked" />
+    <ContentPage.Resources>
+        <Style TargetType="RadioButton">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                <VisualStateGroup x:Name="CheckedStates">
+                <VisualState x:Name="Checked">
+                            <VisualState.Setters>
+                                <Setter Property="TextColor"
+                            Value="Green" />
+                    <Setter Property="Opacity"
+                            Value="1" />
+                </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Unchecked">
+                    <VisualState.Setters>
+                        <Setter Property="TextColor"
+                                Value="Red" />
+                        <Setter Property="Opacity"
+                                Value="0.5" />
+                    </VisualState.Setters>
+                </VisualState>
+                </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentPage.Resources>
+    
+    <StackLayout Spacing="10" Margin="10">
 
-        <Label Text="{Binding Enunciado}" />
+		<Button Text="Sortear Fácil" Clicked="Button_Clicked" />
 
-        <RadioButton Content="{Binding Path=Alternativas[0].Descricao}" />
-        <RadioButton Content="{Binding Path=Alternativas[1].Descricao}" />
-        <RadioButton Content="{Binding Path=Alternativas[2].Descricao}" />
-        <RadioButton Content="{Binding Path=Alternativas[3].Descricao}" />
+		<Label Text="{Binding Enunciado}" />
 
-        <StackLayout Orientation="Horizontal">
-            <Button Text="Parar" />
-            <Button Text="Próxima" Clicked="Button_Clicked_Proxima" />
-        </StackLayout>
-        
-    </StackLayout>
+		<StackLayout>
+				<RadioButton x:Name="alt0"
+					Content="{Binding Path=Alternativas[0].Descricao}"
+					Value="{Binding Path=Alternativas[0].Correta}" />
+
+				<RadioButton x:Name="alt1"
+					Content="{Binding Path=Alternativas[1].Descricao}"
+					Value="{Binding Path=Alternativas[1].Correta}" />
+
+				<RadioButton x:Name="alt2"
+					Content="{Binding Path=Alternativas[2].Descricao}"
+					Value="{Binding Path=Alternativas[2].Correta}" />
+            
+				<RadioButton x:Name="alt3"
+					Content="{Binding Path=Alternativas[3].Descricao}"
+					Value="{Binding Path=Alternativas[3].Correta}" />
+		</StackLayout>
+		
+		<StackLayout Orientation="Horizontal">
+			<Button Text="Parar" />
+			<Button Text="Próxima" Clicked="Button_Clicked_Proxima" />
+		</StackLayout>
+	</StackLayout>
 </ContentPage>
+			
+	
